--- a/css/main.css
+++ b/css/main.css
@@ -511,6 +511,8 @@ footer .theme-by {
 
 /* Hinh anh vao bai dang */
 .post-img-post {
+  margin-top: 5%;
+  margin-bottom: 5%;
   margin-left: auto;
   margin-right: auto;
   border: solid #ddd;
