--- a/_includes/head.html
+++ b/_includes/head.html
@@ -94,7 +94,6 @@
   <meta property="og:description" content="{{ page.content | strip_html | xml_escape | truncatewords: 50 }}">
   {% endif %}
 
-
   <meta property="og:type" content="website" />
 
   {% if page.id %}
@@ -108,7 +107,7 @@
   {% if page.share-img %}
   <meta property="og:image" content="{{ page.share-img }}" />
   {% elsif site.avatar %}
-  <meta property="og:image" content="{{ site.url }}{{ site.avatar }}" />
+  <meta property="og:image" content="{{ site.url }}/{{ site.avatar }}" />
   {% endif %}
 
 
@@ -136,7 +135,7 @@
   {% if page.share-img %}
   <meta name="twitter:image" content="{{ page.share-img }}" />
   {% elsif site.avatar %}
-  <meta name="twitter:image" content="{{ site.url }}{{ site.avatar }}" />
+  <meta name="twitter:image" content="{{ site.url }}/{{ site.avatar }}" />
   {% endif %}
 
   <!-- Script ngăn chặn click chuột phải xem thuôc tính của trang -->
@@ -204,6 +203,6 @@
         document.onmousedown=killCopy 
         document.onclick=reEnable 
     }
-</script>
+  </script>
 
 </head>
