Cập nhật tắt tính năng "Do Not Copy". Thêm Google Ads.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -181,7 +181,7 @@
   </script>
 
   <!-- Script ngăn chặn click chuột trái quét văn bản để copy -->
-  <title>Do not Copy</title>
+  <!-- <title>Do not Copy</title>
   <style>
     body {
       -webkit-touch-callout: none;
@@ -203,6 +203,21 @@
         document.onmousedown=killCopy 
         document.onclick=reEnable 
     }
+  </script> -->
+
+  <!-- Global site tag (gtag.js) - Google Ads: 907342272 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-907342272"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-907342272');
+  </script>
+
+  <!-- Event snippet for Website traffic conversion page -->
+  <script>
+    gtag('event', 'conversion', { 'send_to': 'AW-907342272/chcJCMvftfQCEMDj07AD' });
   </script>
 
 </head>
