Cập nhật tạo Top Button.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -187,7 +187,7 @@
 
 <!-- Simple Jekyll Search -->
 <script src="/js/jquery-3.5.1.js"></script>
-<script src="/js/simple-jekyll-search.min.js" | {{ prepend: site.baseurl }}"></script>
+<script src="/js/simple-jekyll-search.min.js" | {{ prepend: site.baseurl }}></script>
 <!-- Simple Jekyll Search -->
 <script>
   // https://stackoverflow.com/questions/1912501/unescape-html-entities-in-javascript
@@ -244,3 +244,33 @@
   });
 </script>
 
+
+<!-- Tạo nút nhấn lên TOP -->
+<button onclick="topFunction()" id="myBtn" title="Go to top">
+  <span class="fa-stack fa-lg" aria-hidden="true">
+    <i class="fa fa-caret-square-o-up fa-stack-2x fa-inverse"></i>
+  </span>
+  <span class="sr-only">Phone</span>
+</button>
+
+<script>
+// Get the button
+let mybutton = document.getElementById("myBtn");
+
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+</script>
