Cập nhật canh giữa cho tiêu đề Post Directory

--- a/_includes/sidebar-post-nav.html
+++ b/_includes/sidebar-post-nav.html
@@ -3,7 +3,7 @@
 <section class="post-directory">
     <!-- Links that trigger the jumping -->
     <!-- Added by javascript below -->
-    <h3>📖 Post Directory </h3>
+    <h3><center>📖 Post Directory</center></h3>
     <dl></dl>
 </section>
 </div>
