--- a/css/sidebar-post-nav.css
+++ b/css/sidebar-post-nav.css
@@ -30,3 +30,10 @@
 .col-md-4 {
     position: static; /* fix strange behavior */
 }
+
+/* If the screen size is 1024px wide or less, hide the element */
+@media only screen and (max-width: 1024px) {
+    .post-directory{
+      display: none;
+    }
+  }
