--- a/css/sidebar-post-nav.css
+++ b/css/sidebar-post-nav.css
@@ -3,6 +3,9 @@
     background: #fff;
     box-shadow: 0 2px 10px 2px rgba(0, 0, 0, 0.2);
     width: 300px;
+    border-radius: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .post-directory dt, dd{
