--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,19 @@ a:focus {
 blockquote {
   color: #808080;
   font-style: italic;
+  position: relative;
+  border-left: none;
+}
+blockquote::after {
+  position: absolute;
+  top: -15px;
+  left: 0;
+  z-index: -1;
+  line-height: 50px;
+  font-family: 'FontAwesome';
+  content:"\f10d";
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.274);
 }
 blockquote p:first-child {
   margin-top: 0;
