--- a/css/main.css
+++ b/css/main.css
@@ -20,15 +20,18 @@ layout: null
   transform: translate(0, 100%);
   opacity: 0;
 }
+
 .search-page.search-active {
   opacity: 1;
   -webkit-transform: translate(0, 0) scale(1, 1);
   -ms-transform: translate(0, 0) scale(1, 1);
   transform: translate(0, 0) scale(1, 1);
 }
+
 .search-page.search-active .search-main {
   opacity: 1;
 }
+
 .search-page .search-main {
   padding-top: 50px;
   height: 100%;
@@ -36,10 +39,12 @@ layout: null
   -webkit-transition: all 400ms cubic-bezier(0.32, 1, 0.23, 1) 250ms;
   transition: all 400ms cubic-bezier(0.32, 1, 0.23, 1) 250ms;
 }
+
 .search-page .search-main .row,
-.search-page .search-main .row > div {
+.search-page .search-main .row>div {
   height: 100%;
 }
+
 .search-page .search-icon-close-container {
   position: absolute;
   z-index: 1;
@@ -47,9 +52,11 @@ layout: null
   top: 0;
   right: 2px;
 }
+
 .search-page .search-icon-close-container i {
   font-size: 20px;
 }
+
 .search-page #search-input {
   font-family: "Fira Code", Menlo, Monaco, Consolas, "Courier New", monospace;
   border: none;
@@ -61,17 +68,20 @@ layout: null
   font-weight: bold;
   color: #404040;
 }
+
 @media only screen and (min-width: 768px) {
   .search-page #search-input {
     margin-left: 20px;
   }
 }
+
 .search-page #search-results {
   overflow: auto;
   height: 100%;
   -webkit-overflow-scrolling: touch;
   padding-bottom: 80px;
 }
+
 .search-icon a,
 .search-icon-close {
   cursor: pointer;
@@ -80,10 +90,12 @@ layout: null
   -webkit-transition: all 0.25s;
   transition: all 0.25s;
 }
+
 .search-icon a:hover,
 .search-icon-close:hover {
   opacity: 0.8;
 }
+
 .search-icon,
 .search-icon-close {
   font-size: 16px;
@@ -97,41 +109,72 @@ body {
   color: #404040;
   position: relative;
   background: #FFF;
-  {% if site.page-col %}
-  background: {{ site.page-col }};
-  {% endif %}
-  {% if site.page-img %}
+
+    {
+    % if site.page-col %
+  }
+
+  background: {
+      {
+      site.page-col
+    }
+  }
+
+  ;
+
+    {
+    % endif %
+  }
+
+    {
+    % if site.page-img %
+  }
+
   background-image: url({{ site.page-img }});
   background-attachment: fixed;
-  {% endif %}
+
+    {
+    % endif %
+  }
 }
 
 p {
   line-height: 1.5;
   margin: 10px 0;
 }
+
 p a {
   /* text-decoration: underline */
   color: #ff9966;
 }
-h1,h2,h3,h4,h5,h6 {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 800;
 }
+
 a {
   color: #ff9966;
 }
+
 a:hover,
 a:focus {
   color: #920e6a;
   text-decoration: none;
 }
+
 blockquote {
   color: #808080;
   font-style: italic;
   position: relative;
   border-left: none;
 }
+
 blockquote::after {
   position: absolute;
   top: -15px;
@@ -139,13 +182,15 @@ blockquote::after {
   z-index: -1;
   line-height: 50px;
   font-family: 'FontAwesome';
-  content:"\f10d";
+  content: "\f10d";
   font-size: 20px;
   color: rgba(0, 0, 0, 0.274);
 }
+
 blockquote p:first-child {
   margin-top: 0;
 }
+
 hr.small {
   max-width: 100px;
   margin: 15px auto;
@@ -157,6 +202,7 @@ hr.small {
 .main-content {
   padding-top: 80px;
 }
+
 @media only screen and (min-width: 768px) {
   .main-content {
     padding-left: env(safe-area-inset-left);
@@ -179,15 +225,18 @@ hr.small {
   text-shadow: none;
   background: #890000;
 }
+
 ::selection {
   color: white;
   text-shadow: none;
   background: #890000;
 }
+
 img::selection {
   color: white;
   background: transparent;
 }
+
 img::-moz-selection {
   color: white;
   background: transparent;
@@ -212,7 +261,8 @@ img {
 /* --- Navbar --- */
 
 .navbar-custom {
-  z-index: 3; /* --- thêm line này để fix lỗi cho thanh navbar ẩn sau mục search --- */
+  z-index: 3;
+  /* --- thêm line này để fix lỗi cho thanh navbar ẩn sau mục search --- */
   background: #F5F5F5;
   border-bottom: 1px solid #EAEAEA;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -242,7 +292,7 @@ img {
 
 
 .navbar-custom .navbar-brand:hover,
-.navbar-custom .navbar-brand:focus ,
+.navbar-custom .navbar-brand:focus,
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
   color: #890000;
@@ -254,6 +304,7 @@ img {
   -moz-transition: padding .5s ease-in-out;
   transition: padding .5s ease-in-out;
 }
+
 .navbar-custom .navbar-brand-logo img {
   height: 50px;
   border-radius: 50%;
@@ -261,9 +312,11 @@ img {
   -moz-transition: height .5s ease-in-out;
   transition: height .5s ease-in-out;
 }
+
 .navbar-custom.top-nav-short .navbar-brand-logo {
   padding-top: 5px;
 }
+
 .navbar-custom.top-nav-short .navbar-brand-logo img {
   height: 40px;
 }
@@ -271,9 +324,9 @@ img {
 @media only screen and (min-width: 768px) {
   .navbar-custom {
     padding: 20px 0;
-    -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-    -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-    transition: background .5s ease-in-out,padding .5s ease-in-out;
+    -webkit-transition: background .5s ease-in-out, padding .5s ease-in-out;
+    -moz-transition: background .5s ease-in-out, padding .5s ease-in-out;
+    transition: background .5s ease-in-out, padding .5s ease-in-out;
   }
 
   .navbar-custom.top-nav-short {
@@ -287,7 +340,8 @@ img {
   width: 50px;
   margin-top: -25px;
 }
-.navbar-custom .avatar-container  .avatar-img-border {
+
+.navbar-custom .avatar-container .avatar-img-border {
   width: 100%;
   border-radius: 50%;
   margin-left: -50%;
@@ -296,13 +350,14 @@ img {
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
   -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 }
-.navbar-custom .avatar-container  .avatar-img {
+
+.navbar-custom .avatar-container .avatar-img {
   width: 100%;
   border-radius: 50%;
   display: block;
 }
 
-.navbar-custom.top-nav-expanded .avatar-container  {
+.navbar-custom.top-nav-expanded .avatar-container {
   display: none;
 }
 
@@ -312,20 +367,20 @@ img {
     margin-top: -50px;
   }
 
-  .navbar-custom .avatar-container  .avatar-img-border {
+  .navbar-custom .avatar-container .avatar-img-border {
     width: 100%;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
     -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
     -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
   }
-  
-  .navbar-custom .avatar-container  .avatar-img {
+
+  .navbar-custom .avatar-container .avatar-img {
     width: 100%;
   }
 
 }
 
-.container-fluid  {
+.container-fluid {
   padding-left: max(15px, env(safe-area-inset-left));
   padding-right: max(15px, env(safe-area-inset-right));
 }
@@ -334,14 +389,17 @@ img {
 .navbar-custom .nav .navlinks-container {
   position: relative;
 }
+
 .navbar-custom .nav .navlinks-parent:after {
   content: " \25BC";
 }
+
 .navbar-custom .nav .navlinks-children {
   width: 100%;
   display: none;
   word-break: break-word;
 }
+
 .navbar-custom .nav .navlinks-container .navlinks-children a {
   display: block;
   padding: 10px;
@@ -351,27 +409,34 @@ img {
   border-width: 0 1px 1px 1px;
   font-weight: normal;
 }
+
 @media only screen and (max-width: 767px) {
   .navbar-custom .nav .navlinks-container.show-children {
     background: rgba(0, 0, 0, 0.2);
   }
+
   .navbar-custom .nav .navlinks-container.show-children .navlinks-children {
     display: block;
   }
 }
+
 @media only screen and (min-width: 768px) {
   .navbar-custom .nav .navlinks-container {
     text-align: center;
   }
+
   .navbar-custom .nav .navlinks-container:hover {
     background: rgba(0, 0, 0, 0.2);
   }
+
   .navbar-custom .nav .navlinks-container:hover .navlinks-children {
     display: block;
   }
+
   .navbar-custom .nav .navlinks-children {
     position: absolute;
   }
+
   .navbar-custom .nav .navlinks-container .navlinks-children a {
     padding-left: 10px;
     border: 1px solid #eaeaea;
@@ -404,11 +469,13 @@ footer .list-inline {
   margin: 0;
   padding: 0;
 }
+
 footer .copyright {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   text-align: center;
   margin-bottom: 0;
 }
+
 footer .theme-by {
   text-align: center;
   margin: 10px 0 0;
@@ -418,9 +485,11 @@ footer .theme-by {
   footer {
     padding: 50px 0;
   }
+
   footer .footer-links {
     font-size: 18px;
   }
+
   footer .copyright {
     font-size: 16px;
   }
@@ -458,11 +527,13 @@ footer .theme-by {
   font-size: 30px;
   margin-top: 0;
 }
+
 .post-preview .post-subtitle {
   margin: 0;
   font-weight: 300;
   margin-bottom: 10px;
 }
+
 .post-preview .post-meta,
 .post-heading .post-meta {
   color: #808080;
@@ -470,16 +541,20 @@ footer .theme-by {
   font-style: italic;
   margin: 0 0 10px;
 }
+
 .post-preview .post-entry {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+
 .post-entry-container {
   display: inline-block;
   width: 100%;
 }
+
 .post-entry {
   width: 100%;
 }
+
 /* Khung ngoai */
 .post-image {
   float: right;
@@ -488,9 +563,11 @@ footer .theme-by {
   filter: grayscale(90%);
   margin-top: -50px;
 }
+
 .post-image:hover {
   filter: grayscale(0%);
 }
+
 /* Hinh anh thuc su hien ra */
 .post-image img {
   border-radius: 100px;
@@ -498,15 +575,19 @@ footer .theme-by {
   width: 160px;
   margin: 20px;
 }
+
 .post-preview .post-read-more {
   font-weight: 800;
 }
 
 @media only screen and (max-width: 500px) {
-  .post-image, .post-image img {
+
+  .post-image,
+  .post-image img {
     height: 100px;
     width: 100px;
   }
+
   .post-image {
     width: 100%;
     text-align: center;
@@ -538,6 +619,7 @@ footer .theme-by {
   font-family: 'Courier New', Courier, monospace;
   transition: transform 330ms ease-out; /* Tạo hiệu ứng chuyển động zoom */
 }
+
 .post-img-post:hover {
   transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   transition: transform 330ms ease-in; /* Tạo hiệu ứng chuyển động zoom */
@@ -563,6 +645,7 @@ footer .theme-by {
   background-color: #f087d01f;
   border-radius: 25px;
 }
+
 /* Cập nhật cho chữ chạy thì không bị nhảy lên nhảy xuống. Khóa kích thuocs vùng hiern thị chữ chạy. */
 .typed_caption {
   width: auto;
@@ -572,6 +655,7 @@ footer .theme-by {
   padding-bottom: 10px;
   padding-top: 5px;
 }
+
 /* Cập nhật khoảng cách cho bài viết với ảnh bìa.  */
 .row {
   width: auto;
@@ -619,16 +703,19 @@ footer .theme-by {
   margin: 80px 0 20px;
   position: relative;
 }
+
 .intro-header.big-img {
   background: no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-  margin-top: 51px; /* The small navbar is 50px tall + 1px border */
+  margin-top: 51px;
+  /* The small navbar is 50px tall + 1px border */
   margin-bottom: -10px;
 }
-.intro-header.big-img  .big-img-transition {
+
+.intro-header.big-img .big-img-transition {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -642,26 +729,32 @@ footer .theme-by {
   -moz-transition: opacity 1s linear;
   transition: opacity 1s linear;
 }
+
 .intro-header .page-heading {
   text-align: center;
 }
-.big-img{
+
+.big-img {
   height: 450px;
 }
+
 .intro-header.big-img .page-heading,
 .intro-header.big-img .post-heading {
   padding: 100px 0;
   color: #FFF;
   text-shadow: 1px 1px 3px #000;
 }
+
 .intro-header .page-heading h1 {
   margin-top: 0;
   font-size: 50px;
 }
+
 .intro-header .post-heading h1 {
   margin-top: 0;
   font-size: 35px;
 }
+
 .intro-header .page-heading .page-subheading,
 .intro-header .post-heading .post-subheading {
   font-size: 27px;
@@ -671,24 +764,30 @@ footer .theme-by {
   font-weight: 300;
   margin: 10px 0 0;
 }
+
 .intro-header .post-heading .post-subheading {
   margin-bottom: 20px;
 }
+
 .intro-header.big-img .page-heading .page-subheading,
 .intro-header.big-img .post-heading .post-subheading {
   font-weight: 400;
 }
+
 .intro-header.big-img .page-heading hr {
   box-shadow: 1px 1px 3px #000;
   -webkit-box-shadow: 1px 1px 3px #000;
   -moz-box-shadow: 1px 1px 3px #000;
 }
+
 .intro-header.big-img .post-heading .post-meta {
   color: #EEE;
 }
+
 .img-desc {
   border-radius: 10px;
 }
+
 .intro-header.big-img .img-desc {
   background: rgba(30, 30, 30, 0.6);
   position: absolute;
@@ -700,24 +799,31 @@ footer .theme-by {
   bottom: 0;
   display: none;
 }
+
 @media only screen and (min-width: 768px) {
   .intro-header {
     margin-top: 130px;
   }
+
   .intro-header.big-img {
-    margin-top: 91px;  /* Full navbar is small navbar + 20px padding on each side when expanded */
+    margin-top: 91px;
+    /* Full navbar is small navbar + 20px padding on each side when expanded */
     margin-bottom: -10px;
   }
+
   .intro-header.big-img .page-heading,
-  .intro-header.big-img .post-heading  {
+  .intro-header.big-img .post-heading {
     padding: 150px 0;
   }
+
   .intro-header .page-heading h1 {
     font-size: 80px;
   }
+
   .intro-header .post-heading h1 {
     font-size: 50px;
   }
+
   .intro-header.big-img .img-desc {
     font-size: 14px;
   }
@@ -730,27 +836,33 @@ footer .theme-by {
   padding: 20px 0;
   box-shadow: 0 0 5px #AAA;
 }
+
 /* Many phones are 320 or 360px, so make sure images are a proper aspect ratio in those cases */
 .header-section.has-img .intro-header.no-img {
   display: none;
 }
+
 @media only screen and (max-width: 365px) {
   .header-section.has-img .intro-header.no-img {
     display: block;
   }
+
   .intro-header.big-img {
     width: 100%;
     height: 220px;
   }
+
   .intro-header.big-img .page-heading,
   .intro-header.big-img .post-heading {
     display: none;
   }
+
   .header-section.has-img .big-img {
     margin-bottom: 0;
   }
 }
-@media only screen and (max-width: 325px) { 
+
+@media only screen and (max-width: 325px) {
   .intro-header.big-img {
     height: 200px;
   }
@@ -770,15 +882,16 @@ footer .theme-by {
 #header-gh-btns {
   margin-bottom: 15px;
 }
+
 @media only screen and (max-width: 500px) {
-  #header-gh-btns > iframe {
+  #header-gh-btns>iframe {
     display: block;
     margin-bottom: 5px;
   }
 }
 
 /* Sửa giao diện sub-title, tạo phông nền mờ phía dễ đọc chữ. */
-.intro-header .page-heading .page-subheading{
+.intro-header .page-heading .page-subheading {
   padding-bottom: 10px;
   border-radius: 8px;
   margin-left: 10px;
@@ -792,7 +905,7 @@ footer .theme-by {
   bottom: 20px;
   right: 30px;
   z-index: 99;
-  border:none;
+  border: none;
   border-radius: 10px;
   outline: none;
   background-color: rgb(255, 136, 0);
@@ -816,11 +929,13 @@ footer .theme-by {
   border-radius: 0;
   color: #404040;
 }
+
 @media only screen and (min-width: 768px) {
   .pager li a {
     padding: 15px 25px;
   }
 }
+
 .pager li a:hover,
 .pager li a:focus {
   color: #FFF;
@@ -837,7 +952,7 @@ footer .theme-by {
 }
 
 @media only screen and (min-width: 768px) {
-  .pager.blog-pager  {
+  .pager.blog-pager {
     margin-top: 10px;
   }
 }
@@ -847,15 +962,18 @@ footer .theme-by {
 table {
   padding: 0;
 }
+
 table tr {
   border-top: 1px solid #cccccc;
   background-color: #ffffff;
   margin: 0;
   padding: 0;
 }
+
 table tr:nth-child(2n) {
   background-color: #f8f8f8;
 }
+
 table tr th {
   font-weight: bold;
   border: 1px solid #cccccc;
@@ -863,16 +981,19 @@ table tr th {
   margin: 0;
   padding: 6px 13px;
 }
+
 table tr td {
   border: 1px solid #cccccc;
   text-align: left;
   margin: 0;
   padding: 6px 13px;
 }
+
 table tr th :first-child,
 table tr td :first-child {
   margin-top: 0;
 }
+
 table tr th :last-child,
 table tr td :last-child {
   margin-bottom: 0;
@@ -884,10 +1005,14 @@ pre {
   font-size: 16px;
   line-height: 1.5em;
 }
+
 pre code {
   white-space: pre;
 }
-pre.highlight, .highlight > pre, td.code pre {
+
+pre.highlight,
+.highlight>pre,
+td.code pre {
   background: #FAFAFA;
   background-image: linear-gradient(#F9F9F9 50%, #FDFDFD 50%);
   background-repeat: repeat;
@@ -895,24 +1020,33 @@ pre.highlight, .highlight > pre, td.code pre {
   background-position: 0px 10px;
   border-left: 7px solid #444;
 }
-code table, code table td, code table th, code table tbody, code table tr,
+
+code table,
+code table td,
+code table th,
+code table tbody,
+code table tr,
 td.gutter pre {
   padding: 0;
   border: none;
   background-color: #fff;
 }
-.highlight > pre {
+
+.highlight>pre {
   padding: 0;
 }
-.highlight > pre.highlight {
+
+.highlight>pre.highlight {
   padding: 9.5px;
 }
+
 td.code pre {
   border-width: 0 0 0 2px;
   border-style: solid;
   border-color: #444;
   border-radius: 0;
 }
+
 td.gutter {
   padding-top: 3px;
 }
@@ -941,7 +1075,9 @@ td.gutter {
 }
 
 /* --- Notification boxes --- */
-.box-note, .box-warning, .box-error {
+.box-note,
+.box-warning,
+.box-error {
   padding: 15px 15px 15px 10px;
   margin: 20px 20px 20px 5px;
   border: 1px solid #eee;
@@ -966,11 +1102,13 @@ td.gutter {
 
 /* Fix table border github gist snippets */
 
-.gist, .gist-file table tr {
+.gist,
+.gist-file table tr {
   border: unset;
 }
 
-.gist, .gist-file table tr td {
+.gist,
+.gist-file table tr td {
   border: unset;
 }
 
@@ -1039,11 +1177,13 @@ td.gutter {
 .mini-post-list {
   margin: 20px 0 15px 0;
 }
+
 .mini-post-list .tag-text {
   font-weight: 200;
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Arial", "PingFang SC", "Hiragino Sans GB", "STHeiti", "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "WenQuanYi Micro Hei", SimSun, sans-serif;
   line-height: 1.7;
 }
+
 .mini-post-list .post-preview {
   position: relative;
 }
@@ -1055,8 +1195,9 @@ td.gutter {
   padding-right: 150px;
   padding-top: 10px;
   text-align: center;
-  -webkit-box-reflect: below  -70px linear-gradient(transparent, rgba(107, 13, 13, 0.144));
+  -webkit-box-reflect: below -70px linear-gradient(transparent, rgba(107, 13, 13, 0.144));
 }
+
 .waviy span {
   position: relative;
   display: inline-block;
@@ -1064,11 +1205,82 @@ td.gutter {
   animation: waviy 1s infinite;
   animation-delay: calc(.1s * var(--i))
 }
+
 @keyframes waviy {
-  0%,40%,100% {
+
+  0%,
+  40%,
+  100% {
     transform: translateY(0)
   }
+
   20% {
     transform: translateY(-20px)
   }
+}
+
+
+/*
+ *  STYLE scrollbar
+ */
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #F5F5F5;
+}
+::-webkit-scrollbar {
+  width: 15px;
+  height: 10px; 
+  background-color: #F5F5F5;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #F90;
+  background-image: -webkit-linear-gradient(45deg,
+      rgba(255, 255, 255, .2) 25%,
+      transparent 25%,
+      transparent 50%,
+      rgba(255, 255, 255, .2) 50%,
+      rgba(255, 255, 255, .2) 75%,
+      transparent 75%,
+      transparent);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #F90;
+  background-image: -webkit-linear-gradient(-45deg,
+      rgba(255, 255, 255, .2) 25%,
+      transparent 25%,
+      transparent 50%,
+      rgba(255, 255, 255, .2) 50%,
+      rgba(255, 255, 255, .2) 75%,
+      transparent 75%,
+      transparent);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb:horizontal{
+  background-color: rgb(83, 83, 83);
+  background-image: -webkit-linear-gradient(45deg,
+      rgba(255, 255, 255, .2) 25%,
+      transparent 25%,
+      transparent 50%,
+      rgba(255, 255, 255, .2) 50%,
+      rgba(255, 255, 255, .2) 75%,
+      transparent 75%,
+      transparent);
+  border-radius: 0px 5px 5px 0px;
+  cursor: pointer;
+}
+::-webkit-scrollbar-thumb:horizontal:hover {
+  background-color: rgba(83, 83, 83, 0.212);
+  background-image: -webkit-linear-gradient(-45deg,
+      rgba(0, 0, 0, 0.2) 25%,
+      transparent 25%,
+      transparent 50%,
+      rgba(0, 0, 0, .2) 50%,
+      rgba(0, 0, 0, .2) 75%,
+      transparent 75%,
+      transparent);
+  border-radius: 0px 5px 5px 0px;
 }
