Cập nhật HEADING STYLE <h3> cho blog.

--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,35 @@ h6 {
   font-weight: 800;
 }
 
+/* === HEADING STYLE #3 === */
+h3 {
+  font-size: 28px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 1.5em;
+  padding-bottom: 15px;
+  position: relative;
+}
+h3:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 5px;
+  width: 55px;
+  background-color: #111;
+}
+h3:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 2px;
+  height: 1px;
+  width: 95%;
+  max-width: 255px;
+  background-color: #333;
+}
+
 a {
   color: #ff9966;
 }
@@ -532,6 +561,12 @@ footer .theme-by {
   margin: 0;
   font-weight: 300;
   margin-bottom: 10px;
+}
+
+.post-subtitle {
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 800;
+  font-size: 25px;
 }
 
 .post-preview .post-meta,
