Cập nhật CSS cho Table of Contents.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,6 +39,17 @@ layout: base
       {% endif %}
   
       <article role="main" class="blog-post">
+        <div class=toc>
+          <details>
+                  <summary accesskey=c title="(Alt + C)">
+                    <span class=details><h4>👉 Table of Contents</h4></span>
+                  </summary>
+                  <div class=inner>
+                    {% include sidebar-post-nav-mini.html %}
+                  </div>
+          </details>
+        </div>
+
         {{ content }}
       </article>
   
