--- a/css/sidebar-post-nav.css
+++ b/css/sidebar-post-nav.css
@@ -8,35 +8,40 @@
     padding-bottom: 5px;
 }
 
-.post-directory dt, dd{
+.post-directory dt,
+dd {
     border-left: 5px solid #666;
     cursor: pointer;
     padding: 2px 5px 2px 15px;
+    font-weight: bold;
 }
 
-.post-directory a{
+.post-directory a {
     text-decoration: none;
     display: inline-block;
     width: 100%;
 }
 
-.post-directory dt:hover, dd:hover {
+.post-directory dt:hover,
+dd:hover {
     background: #666;
     border-left: 5px solid #111;
 }
 
-.post-directory dt:hover a, dd:hover a {
+.post-directory dt:hover a,
+dd:hover a {
     font-weight: bold;
     color: #fff;
 }
 
 .col-md-4 {
-    position: static; /* fix strange behavior */
+    position: static;
+    /* fix strange behavior */
 }
 
 /* If the screen size is 1024px wide or less, hide the element */
 @media only screen and (max-width: 1024px) {
-    .post-directory{
-      display: none;
+    .post-directory {
+        display: none;
     }
-  }
+}
