--- a/_includes/head.html
+++ b/_includes/head.html
@@ -181,7 +181,7 @@
   </script>
 
   <!-- Script ngăn chặn click chuột trái quét văn bản để copy -->
-  <!-- <title>Do not Copy</title>
+  <title>Do not Copy</title>
   <style>
     body {
       -webkit-touch-callout: none;
@@ -203,7 +203,7 @@
         document.onmousedown=killCopy 
         document.onclick=reEnable 
     }
-  </script> -->
+  </script>
 
   <!-- Global site tag (gtag.js) - Google Ads: 907342272 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-907342272"></script>
