--- a/css/main.css
+++ b/css/main.css
@@ -646,19 +646,20 @@ footer .theme-by {
   margin-right: auto;
   border: solid #ddd;
   background-color: rgb(247, 247, 247);
+  box-shadow: 0 2px 10px 2px rgba(0, 0, 0, 0.2);
   border-radius: 7px;
   padding: 5px;
   width: 80%;
   text-align: center;
   font-style: italic;
   font-family: 'Courier New', Courier, monospace;
-  transition: transform 330ms ease-out; /* Tạo hiệu ứng chuyển động zoom */
+  /* transition: transform 330ms ease-out;  */
 }
 
-.post-img-post:hover {
-  transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-  transition: transform 330ms ease-in; /* Tạo hiệu ứng chuyển động zoom */
-}
+/* .post-img-post:hover {
+  transform: scale(1.5); 
+  transition: transform 330ms ease-in; 
+} */
 
 .ndb-transbox {
   height: max-content;
