Cập nhật lại giao diện bài viết.

--- a/css/main.css
+++ b/css/main.css
@@ -649,7 +649,7 @@ footer .theme-by {
   box-shadow: 0 2px 10px 2px rgba(0, 0, 0, 0.2);
   border-radius: 7px;
   padding: 5px;
-  width: 80%;
+  width: fit-content;
   text-align: center;
   font-style: italic;
   font-family: 'Courier New', Courier, monospace;
