--- a/css/sidebar-post-nav-mini.css
+++ b/css/sidebar-post-nav-mini.css
@@ -1,15 +1,13 @@
 /* Table of Contents */
 .toc {
-    margin: 0 2px 40px;
+    /* margin: 0 2px 10px; */
     border: 1px solid var(--border);
     background: var(--code-bg);
     border-radius: var(--radius);
     padding: .4em;
     background-color: rgba(70, 67, 63, 0.204);
     border-radius: 20px;
-    transition: width 3s;
-    transition-delay: 1s;
-    color: brown;
+    color: rgb(112, 29, 29);
 }
 
 .toc details summary {
@@ -27,8 +25,8 @@
 }
 
 .toc .inner {
-    margin: 0 20px;
-    padding: 10px 20px
+    margin: 0 10px;
+    /* padding: 10px 20px */
 }
 
 .toc summary:focus {
@@ -36,12 +34,12 @@
 }
 
 .post-directory-mini {
-    font-size: 14px;
+    font-size: 12px;
     background: rgb(255, 255, 255);
     box-shadow: 0 2px 10px 2px rgba(0, 0, 0, 0.3);
     border-radius: 20px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
 
 .post-directory-mini dt,
