--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,47 +1,50 @@
 ---
 common-css:
-  - "/css/bootstrap.min.css"
-  - "/css/bootstrap-social.css"
-  - "/css/main.css"
-  - "/css/particle-js-style.css"
-  - "/css/text_animation_css.css"
+- "/css/bootstrap.min.css"
+- "/css/bootstrap-social.css"
+- "/css/main.css"
+- "/css/particle-js-style.css"
+- "/css/text_animation_css.css"
+- "/css/prism.css"
 common-ext-css:
-  - "//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+- "//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
 common-googlefonts:
-  - "Lora:400,700,400italic,700italic"
-  - "Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+- "Lora:400,700,400italic,700italic"
+- "Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
 common-js:
-  - "/js/jquery-3.5.1.js"
-  - "/js/bootstrap.min.js"
-  - "/js/main.js"
-  - "/js/particles.min.js"
-  - "/js/particles-config.js"
+- "/js/jquery-3.5.1.js"
+- "/js/bootstrap.min.js"
+- "/js/main.js"
+- "/js/particles.min.js"
+- "/js/particles-config.js"
+- "/js/prism.js"
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Beautiful Jekyll | MIT license | Copyright Dean Attali 2016 -->
-  <!--  Modified by Nguyen Duy Bang 2020 -->
-  {% include head.html %}
+<!-- Beautiful Jekyll | MIT license | Copyright Dean Attali 2016 -->
+<!--  Modified by Nguyen Duy Bang 2020 -->
+{% include head.html %}
 
-  <body>
+<body>
 
   <div class="mobile-js-hide">
     <!-- particles.js container -->
     <div id="particles-js"></div>
   </div>
 
-    {% include gtm_body.html %}
+  {% include gtm_body.html %}
 
-    {% include nav.html %}
+  {% include nav.html %}
 
-    {% include search.html %}
+  {% include search.html %}
 
-    {{ content }}
+  {{ content }}
 
-    {% include footer.html %}
-  
-    {% include footer-scripts.html %}
-  
-  </body>
+  {% include footer.html %}
+
+  {% include footer-scripts.html %}
+
+</body>
+
 </html>
