--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,7 @@ h6 {
 
 /* === HEADING STYLE #3 === */
 h3 {
-  font-size: 28px;
+  /* font-size: 28px; */
   font-weight: 500;
   letter-spacing: 0;
   line-height: 1.5em;
@@ -1034,58 +1034,6 @@ table tr th :last-child,
 table tr td :last-child {
   margin-bottom: 0;
 }
-
-/* --- Code blocks --- */
-/* 
-pre {
-  font-size: 16px;
-  line-height: 1.5em;
-}
-
-pre code {
-  white-space: pre;
-}
-
-pre.highlight,
-.highlight>pre,
-td.code pre {
-  background: #FAFAFA;
-  background-image: linear-gradient(#F9F9F9 50%, #FDFDFD 50%);
-  background-repeat: repeat;
-  background-size: 3em 3em;
-  background-position: 0px 10px;
-  border-left: 7px solid #444;
-}
-
-code table,
-code table td,
-code table th,
-code table tbody,
-code table tr,
-td.gutter pre {
-  padding: 0;
-  border: none;
-  background-color: #fff;
-}
-
-.highlight>pre {
-  padding: 0;
-}
-
-.highlight>pre.highlight {
-  padding: 9.5px;
-}
-
-td.code pre {
-  border-width: 0 0 0 2px;
-  border-style: solid;
-  border-color: #444;
-  border-radius: 0;
-}
-
-td.gutter {
-  padding-top: 3px;
-} */
 
 /* --- Social media sharing section --- */
 
