--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,11 +10,11 @@
       </button>
       {% if site.title-img %}
       <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
-        <img src="{{ site.url }}/img/My_Picture/avatar_github1.jpg" />
+        <img src="{{ site.url }}/img/My_Picture/avatar_github1.webp" />
       </a>
       {% else %}
       <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
-        <img src="{{ site.url }}/img/My_Picture/avatar_github1.jpg" />
+        <img src="{{ site.url }}/img/My_Picture/avatar_github1.webp" />
       </a>
       <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
       {% endif %}
@@ -54,7 +54,7 @@
     <!-- <div class="avatar-container">
       <div class="avatar-img-border">
         <a href="{{ site.url }}">
-          <img class="avatar-img" src="{{ site.url }}/img/My_Picture/avatar_github.jpg" />
+          <img class="avatar-img" src="{{ site.url }}/img/My_Picture/avatar_github.webp" />
       </a>
       </div>
     </div> -->
