--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,39 +14,6 @@
             </a>
           </li>
           {% endif %}
-          {% if site.author.github and site.footer-links-active.github %}
-          <li>
-            <a href="https://github.com/{{ site.author.github }}" title="GitHub">
-              <span class="fa-stack fa-lg" aria-hidden="true">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-              </span>
-              <span class="sr-only">GitHub</span>
-            </a>
-          </li>
-          {% endif %}
-          {% if site.author.twitter and site.footer-links-active.twitter %}
-          <li>
-            <a href="https://twitter.com/{{ site.author.twitter }}" title="Twitter">
-              <span class="fa-stack fa-lg" aria-hidden="true">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-              </span>
-              <span class="sr-only">Twitter</span>
-            </a>
-          </li>
-          {% endif %}
-          {% if site.author.reddit and site.footer-links-active.reddit %}
-          <li>
-            <a href="https://reddit.com/u/{{ site.author.reddit }}" title="Reddit">
-              <span class="fa-stack fa-lg" aria-hidden="true">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-reddit fa-stack-1x fa-inverse"></i>
-              </span>
-              <span class="sr-only">Reddit</span>
-            </a>
-          </li>
-          {% endif %}
           {% if site.author.email and site.footer-links-active.email %}
           <li>
             <a href="mailto:{{ site.author.email }}" title="Email me">
@@ -69,28 +36,6 @@
             </a>
           </li>
           {% endif %}
-          {% if site.author.stackoverflow and site.footer-links-active.stackoverflow %}
-          <li>
-            <a href="https://stackoverflow.com/users/{{ site.author.stackoverflow }}" title="StackOverflow">
-              <span class="fa-stack fa-lg" aria-hidden="true">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
-              </span>
-              <span class="sr-only">StackOverflow</span>
-            </a>
-          </li>
-          {% endif %}
-          {% if site.author.snapchat and site.footer-links-active.snapchat %}
-          <li>
-            <a href="https://www.snapchat.com/add/{{ site.author.snapchat }}" title="Snapchat">
-              <span class="fa-stack fa-lg" aria-hidden="true">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-snapchat-ghost fa-stack-1x fa-inverse"></i>
-              </span>
-              <span class="sr-only">Snapchat</span>
-            </a>
-          </li>
-          {% endif %}
           {% if site.author.instagram and site.footer-links-active.instagram %}
           <li>
             <a href="https://www.instagram.com/{{ site.author.instagram }}" title="Instagram">
@@ -99,28 +44,6 @@
                 <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
               </span>
               <span class="sr-only">Instagram</span>
-            </a>
-          </li>
-          {% endif %}
-          {% if site.author.youtube and site.footer-links-active.youtube %}
-          <li>
-            <a href="https://www.youtube.com/{{ site.author.youtube }}" title="YouTube">
-              <span class="fa-stack fa-lg" aria-hidden="true">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
-              </span>
-              <span class="sr-only">YouTube</span>
-            </a>
-          </li>
-          {% endif %}
-          {% if site.author.spotify and site.footer-links-active.spotify %}
-          <li>
-            <a href="https://open.spotify.com/user/{{ site.author.spotify }}" title="Spotify">
-              <span class="fa-stack fa-lg" aria-hidden="true">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-spotify fa-stack-1x fa-inverse"></i>
-              </span>
-              <span class="sr-only">Spotify</span>
             </a>
           </li>
           {% endif %}
@@ -135,46 +58,11 @@
             </a>
           </li>
           {% endif %}
-          {% if site.footer-links-active.rss %}
-          <li>
-            <a href="{{ '/feed.xml' | prepend: site.baseurl }}" title="RSS">
-              <span class="fa-stack fa-lg" aria-hidden="true">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
-              </span>
-              <span class="sr-only">RSS</span>
-            </a>
-          </li>
-          {% endif %}
-          {% if site.author.steam and site.footer-links-active.steam %}
-          <li>
-            <a href="https://steamcommunity.com/id/{{ site.author.steam }}" title="Steam">
-              <span class="fa-stack fa-lg" aria-hidden="true">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-steam fa-stack-1x fa-inverse"></i>
-              </span>
-              <span class="sr-only">Steam</span>
-            </a>
-          </li>
-          {% endif %}
-          {% if site.author.twitch and site.footer-links-active.twitch %}
-          <li>
-            <a href="https://www.twitch.tv/{{ site.author.twitch }}" title="Twitch">
-              <span class="fa-stack fa-lg" aria-hidden="true">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-twitch fa-stack-1x fa-inverse"></i>
-              </span>
-              <span class="sr-only">Twitch</span>
-            </a>
-          </li>
-          {% endif %}
 
         </ul>
         <p class="copyright text-muted">
-          ©Copyright - {{ site.author.name }}
-          &nbsp;&bull;&nbsp;
-          {{ site.time | date: '%Y' }}
-
+           {{ site.author.name }}<br> 
+           ©Copyright - {{ site.time | date: '%Y' }}
           {% if site.url-pretty %}
           &nbsp;&bull;&nbsp;
           <a href="{{ site.url }}">{{ site.url-pretty }}</a>
@@ -247,10 +135,10 @@
 
 <!-- Tạo nút nhấn lên TOP -->
 <button onclick="topFunction()" id="myBtn" title="Go to top">
-  <span class="fa-stack fa-lg" aria-hidden="true">
+  <!-- <span class="fa-stack fa-lg" aria-hidden="true">
     <i class="fa fa-caret-square-o-up fa-stack-2x fa-inverse"></i>
-  </span>
-  <span class="sr-only">Phone</span>
+  </span> -->
+  <img src="/img/Wedding/cute-2.png" width="30px" height= "30px">
 </button>
 
 <script>
