--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,11 +10,11 @@
       </button>
       {% if site.title-img %}
       <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
-        <img src="{{ site.url }}/img/My_Picture/avatar_github1.webp" />
+        <img src="{{ site.url }}/img/My_Picture/avatar_github1.png" />
       </a>
       {% else %}
       <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
-        <img src="{{ site.url }}/img/My_Picture/avatar_github1.webp" />
+        <img src="{{ site.url }}/img/My_Picture/avatar_github1.png" />
       </a>
       <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
       {% endif %}
