--- a/css/main.css
+++ b/css/main.css
@@ -304,14 +304,13 @@ img {
 
 .navbar-custom .navbar-brand {
   text-align: center;
-  text-transform: uppercase;
-  font-size: 20px;
+  font-size: 28px;
   font-weight: 800;
   color: #404040;
+  font-family: f_ndb-transbox;
 }
 
 .navbar-custom .nav li a {
-  text-transform: uppercase;
   font-size: 15px;
   letter-spacing: 1px;
   font-weight: 800;
@@ -476,10 +475,10 @@ img {
 
 footer {
   padding: 30px 0;
-  background: #F5F5F5;
   border-top: 1px #EAEAEA solid;
-  margin-top: 50px;
+  margin-top: 50pxrgb(3, 1, 1)
   font-size: 14px;
+  display: inline;
   {% if site.footer-col %}
   background: {{ site.footer-col }};
   {% endif %}
@@ -502,6 +501,7 @@ footer .copyright {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   text-align: center;
   margin-bottom: 0;
+  color: #c0392b;
 }
 
 footer .theme-by {
@@ -697,7 +697,7 @@ footer .theme-by {
   padding-bottom: 10px;
   padding-top: 5px;
   font-family: f_typed_caption;
-  color: rgba(238, 255, 89, 0.836);
+  color: rgba(238, 255, 89, 0.644);
   text-shadow: 1px 1px 2px #890000b4;
 }
 
@@ -949,20 +949,20 @@ footer .theme-by {
 
 /* Tạo nút nhấn về TOP */
 #myBtn {
-  display: none;
   position: fixed;
   bottom: 20px;
   right: 30px;
   z-index: 99;
-  border: none;
-  border-radius: 10px;
+  border-radius: 50%;
   outline: none;
-  background-color: rgb(255, 136, 0);
+  border: rgb(228, 228, 20);
   cursor: pointer;
+  background-color: rgba(0, 0, 0, 0);
+  height: 42px;
 }
 
 #myBtn:hover {
-  background-color: #555;
+  background-color: rgba(192, 42, 4, 0.637);
 }
 
 /* --- Pager --- */
