--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,9 +4,9 @@
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
         <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <span class="fa-stack " aria-hidden="true">
+          <i class="fa fa-map-marker fa-lg" aria-hidden="true"></i>
+        </span>
       </button>
       {% if site.title-img %}
       <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
