--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@ layout: base
   
       <article role="main" class="blog-post">
         <!-- Table of Contents -->
-        <div class=toc>
+        <!-- <div class=toc>
           <details>
                   <summary accesskey=c title="(Alt + C)">
                     <span class=details><h4>👉 Table of Contents</h4></span>
@@ -49,7 +49,7 @@ layout: base
                     {% include sidebar-post-nav-mini.html %}
                   </div>
           </details>
-        </div>
+        </div> -->
         <!-- Contents -->
         <div class="line-numbers">
           {{ content }}
