--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,6 +1,6 @@
 {% if site.disqus %}
 <!-- Tạm thời chưa cần sài -->
-<!-- <div class="comments">
+<div class="comments">
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         var disqus_shortname = '{{ site.disqus }}';
@@ -20,5 +20,5 @@
         })();
     </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-</div> -->
+</div>
 {% endif %}
