Cập nhật Navbar, tạo thêm Topic phân loại

--- a/css/main.css
+++ b/css/main.css
@@ -424,7 +424,7 @@ img {
 }
 
 .navbar-custom .nav .navlinks-children {
-  width: 100%;
+  width: max-content;
   display: none;
   word-break: break-word;
 }
