Cập nhật lightbox để hiển thị hình ảnh rõ ràng to bự hơn.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -282,3 +282,6 @@ function topFunction() {
   document.documentElement.scrollTop = 0;
 }
 </script>
+
+<!-- lightbox -->
+<script src="/dist/js/lightbox.min.js"></script>
