--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,10 @@
   <meta name="keywords"
     content="linux, python, math, mathematics, bash, google summer of code, raspberry pi, music, Internet of Things, research, android" />
 
+  <!-- lightbox : https://github.com/lokesh/lightbox2.git -->
+  <!-- lightbox : https://lokeshdhakar.com/projects/lightbox2/ -->
+  <link href="/dist/css/lightbox.min.css" rel="stylesheet" />
+
   <!-- favicon -->
   <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
 
