--- a/css/sidebar-post-nav-mini.css
+++ b/css/sidebar-post-nav-mini.css
@@ -72,7 +72,7 @@
 
 /* If the screen size is 1024px wide or less, hide the element */
 
-@media only screen and (min-width: 1024px) {
+/* @media only screen and (min-width: 1024px) {
     .toc {
         display: none;
     }
@@ -80,4 +80,4 @@
     .post-directory-mini {
         display: none;
     }
-}
+} */
