--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -248,33 +248,25 @@
 
 
 <!-- Tạo nút nhấn lên TOP -->
-<button onclick="topFunction()" id="myBtn" title="Go to top">
-  <span class="fa-stack fa-lg" aria-hidden="true">
-    <i class="fa fa-caret-square-o-up fa-stack-2x fa-inverse"></i>
+<button onclick="scrollToTop()" id="scrollToTopBtn" title="Go to top">
+  <span class="icon">
+    <i class="fa fa-arrow-up"></i>
   </span>
 </button>
 
 <script>
-// Get the button
-let mybutton = document.getElementById("myBtn");
-
-// When the user scrolls down 20px from the top of the document, show the button
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-    mybutton.style.display = "block";
-  } else {
-    mybutton.style.display = "none";
+  window.onscroll = function() {scrollFunction()};
+  
+  function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+      document.getElementById("scrollToTopBtn").style.display = "block";
+    } else {
+      document.getElementById("scrollToTopBtn").style.display = "none";
+    }
   }
-}
-
-// When the user clicks on the button, scroll to the top of the document
-function topFunction() {
-  document.body.scrollTop = 0;
-  document.documentElement.scrollTop = 0;
-}
-</script>
-
-<!-- lightbox -->
-<script src="/dist/js/lightbox.min.js"></script>
+  
+  function scrollToTop() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+  }
+  </script>
