Update source code

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -189,8 +189,8 @@
     };
   </script>
 
-  <!-- Script ngăn chặn click chuột trái quét văn bản để copy -->
-  <title>Do not Copy</title>
+  <!-- Script ngăn chặn click chuột trái -->
+  <!-- <title>Do not Copy</title>
   <style>
     body {
       -webkit-touch-callout: none;
@@ -212,7 +212,7 @@
         document.onmousedown=killCopy 
         document.onclick=reEnable 
     }
-  </script>
+  </script> -->
 
   <!-- Global site tag (gtag.js) - Google Ads: 907342272 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-907342272"></script>
