--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,14 +26,19 @@
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
           <div class="{{ include.type }}-heading">
             <div class="ndb-transbox">
-              <h1>{% if page.meta-title %}{{ page.meta-title }}{% else %}<br />{% endif %}</h1>
+              <h1>
+                {% if page.meta-title %}
+                  {{ page.meta-title }}
+                {% endif %}
+              </h1>
               {% if page.subtitle %}
-              {% if include.type == "page" %}
-              <hr class="small">
-              <span class="{{ include.type }}-subheading">{{ page.subtitle }}</span>
-              {% else %}
-              <h2 class="{{ include.type }}-subheading">{{ page.subtitle }}</h2>
-              {% endif %}
+                {% if include.type == "page" %}
+                  <hr class="small">
+                  <span class="{{ include.type }}-subheading">{{ page.subtitle }}</span>
+                {% else %}
+                  <hr class="small">
+                  <h2 class="{{ include.type }}-subheading">{{ page.subtitle }}</h2>
+                {% endif %}
               {% endif %}
 
               {% if include.type == "post" %}
