--- a/css/main.css
+++ b/css/main.css
@@ -106,8 +106,7 @@ body {
   /* position: relative; */
   background: #FFF;
   /* Chèn hình nền */
-  background-color: rgba(0, 0, 0, 0.3); /* Màu đen với độ mờ là 30% (0.3) */
-  background-image: url('/img/My_Picture/body-backgound.png'); /* Đường dẫn đến hình nền */
+  background-image: url('/img/My_Picture/Dalat_NguyenTrai.webp'); /* Đường dẫn đến hình nền */
   background-size: cover; /* Tùy chỉnh kích thước hình nền để phủ toàn bộ phần tử */
   background-position: center; /* Căn chỉnh hình nền theo trung tâm */
   background-repeat: no-repeat; /* Không lặp lại hình nền */
